--- a/Example/package.json
+++ b/Example/package.json
@@ -14,7 +14,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-otp-form": "^1.2.2",
+    "react-native-otp-form": "^1.2.4-rc025",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
